Version 1.3.0: 2021-04-09

You can now use "auto" as a meter driver.
Wmbusmeters will then pick the right driver when
the first telegram arrives. A warning will be printed
in the logs if no driver could be found.

If you do not specify a type= in the meter config file,
then it will default to auto.

Added --logtimestamps=important/never/always to prefix
a logged line in the log file or stderr output with a timestamp.
Important means timestamp warnings and device changes.
Daemon mode defaults to important.

Added support for firmware version 0x14 for im871a dongle.
(The old version is 0x13 and you can see the firmware version if
you run with --verbose.) The new version of the im871a firmware
supports listening to c1 and t1 at the same time.

Version 1.2.0: 2021-03-07

IMPORTANT CHANGES THAT MIGHT AFFECT YOU!vvvvvvvvvvvvvvvvvvvvvv

wmbusmeters now expects the latest version of rtl_wmbus with -s support.
The default behaviour is to use -s to listen to S1,T1 and C1 at the same time.
Check the README for more info.

^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Rattinca helped add support for the EI Electronics smoke detector. Thanks Rattinca!

Ignore duplicates is now enabled by default. Turn it off with --ignoreduplicates=false

Fixed problem with state maintaining meter drivers and wildcard ids.
A HCA driver was producing telegrams with values that jumped up and down.
This was due to the fact that the meter state in the driver was updated
through multiple different telegrams (this is how the meter works).
Clearly a single state object could not properly maintain the state for all
possible meters matching the wildcard, the state became a random mix
of whatever telegrams arrived.

The fix now, is that a meter C++ object for a uniqe id (not wildcard)
is created only when the first telegram arrives that matches the wildcard.
Thus each meter will have its own C++ object, in which the correct state
is maintained.

Version 1.1.0: 2021-02-20
