@@ -286,6 +286,7 @@ Aquametro/Integra Topas Es Kr (topaseskr)
 Bmeters Hydrodigit (hydrodigit) (partly non-standard protocol)
 Diehl/Sappel IZAR RC 868 I R4 PL (izar) (non-standard protocol)
 Diehl HYDRUS (hydrus)
+Diehl IZAR RC I G4 (dme_07)
 Elster Merlin 868 (emerlin868)
 Elster V200H (ev200)
 Maddalena EVO 868 (evo868)
