@@ -33,6 +33,7 @@
     X(COMPACT5,  MANUFACTURER_TCH,  0xc3,  0x45) \
     X(COMPACT5,  MANUFACTURER_TCH,  0x43,  0x22) \
     X(COMPACT5,  MANUFACTURER_TCH,  0x43,  0x45) \
+    X(DME_07,    MANUFACTURER_DME,  0x07,  0x7b) \
     X(EBZWMBE,   MANUFACTURER_EBZ,  0x37,  0x02) \
     X(EURISII,   MANUFACTURER_INE,  0x08,  0x55) \
     X(EHZP,      MANUFACTURER_EMH,  0x02,  0x02) \
