@@ -1,3 +1,6 @@
+
+Support added for the water meter Diehl IZAR RC I G4.
+
 Version 1.3.0: 2021-04-09
 
 You can now use "auto" as a meter driver.
